# GPR5204_CUDA

./: CMakeLists.txt
include/: addition.h  img_post_processing.h
main/: 01_addition.cpp  02_addition.cpp  03_addition.cpp  04_img_grayscale.cpp  05_img_inverse.cpp  06_img_sharpen.cpp  07_img_blur.cpp  08_img_edge.cpp
src/: addition.cu  img_post_processing.cu
